Fix bugs and user give new end points for workflow